appId: com.compartarenta.compartarenta.dev
---
- launchApp:
    stopApp: false
- runFlow:
    file: _navigate_inviter_to_contacts_list.yaml
- tapOn:
    id: "qa-contacts-invite-fab"
- extendedWaitUntil:
    visible:
      id: "qa-contacts-generate-code"
    timeout: 30000
- tapOn:
    id: "qa-contacts-generate-code"
- runFlow:
    file: _dismiss_notification_prompt.yaml
- extendedWaitUntil:
    visible:
      id: "qa-contacts-invitation-short-code"
    timeout: 60000
